--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -536,6 +536,8 @@
           href: how-to-schedule-azure-ssis-integration-runtime.md
         - name: Azure-SSIS-integratieruntime toevoegen aan een virtueel netwerk
           href: join-azure-ssis-integration-runtime-virtual-network.md
+        - name: Zelf-hostende integratieruntime configureren als proxy voor Azure-SSIS IR
+          href: self-hosted-integration-runtime-proxy-ssis.md
         - name: Azure AD-verificatie inschakelen voor Azure-SSIS-integratieruntime
           href: enable-aad-authentication-azure-ssis-ir.md
         - name: Enterprise Edition inrichten voor Azure-SSIS-integratieruntime
