--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -747,6 +747,8 @@
           href: cosmosdb-sql-api-migrate-data-striim.md
         - name: Migreren naar Cassandra-API met behulp van Striim
           href: cosmosdb-cassandra-api-migrate-data-striim.md
+        - name: Honderden terabytes aan gegevens migreren naar Azure Cosmos DB
+          href: migrate-cosmosdb-data.md
     - name: Bibliotheek voor bulksgewijs uitvoeren
       items:
         - name: Over de bibliotheek voor bulkuitvoering
