--- a/articles/hdinsight/hbase/TOC.yml
+++ b/articles/hdinsight/hbase/TOC.yml
@@ -25,6 +25,10 @@
       href: ../hdinsight-component-versioning.md
     - name: HDInsight 4.0
       href: ../hdinsight-version-release.md
+    - name: Problemen oplossen
+      items:
+        - name: Time-outs bij gebruik van de opdracht 'hbase hbck'
+          href: ./hbase-troubleshoot-timeouts-hbase-hbck.md
 - name: Procedures
   items:
     - name: Clusteropslag gebruiken
