--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -164,6 +164,8 @@
               href: devtest-lab-vmcli.md
             - name: Een VM maken - Resource Manager-sjabloon
               href: devtest-lab-use-resource-manager-template.md
+            - name: Een VM maken met behulp van een installatiekopie vanuit een galerie met gedeelde installatiekopieën
+              href: add-vm-use-shared-image.md
             - name: Een VM starten of stoppen met PowerShell of CLI
               href: use-command-line-start-stop-virtual-machines.md
             - name: Een VM opnieuw opstarten
