commit translated contents

--- a/articles/security/develop/TOC.yml
+++ b/articles/security/develop/TOC.yml
@@ -18,11 +18,10 @@
           href: secure-develop.md
         - name: Beveiligde apps implementeren
           href: secure-deploy.md
-- name: Oplossingen
+- name: Resources
   expanded: true
   items:
     - name: Microsoft Security Code Analysis
-      expanded: true
       items:
         - name: Overzicht
           href: security-code-analysis-overview.md
@@ -32,3 +31,49 @@
           href: security-code-analysis-customize.md
         - name: Veelgestelde vragen
           href: security-code-analysis-faq.md
+    - name: Microsoft Threat Modeling Tool
+      displayName: stride
+      href: threat-modeling-tool.md
+      items:
+        - name: Aan de slag
+          href: threat-modeling-tool-getting-started.md
+        - name: Overzicht van de functies
+          href: threat-modeling-tool-feature-overview.md
+        - name: Bedreigingen
+          href: threat-modeling-tool-threats.md
+        - name: Releases
+          href: threat-modeling-tool-releases.md
+          items:
+            - name: Threat Modeling Tool GA-release 7.1.5091.2 - 12 sept 2018
+              href: threat-modeling-tool-releases-71509112.md
+            - name: Threat Modeling Tool-updaterelease 7.1.51023.1 - 1 nov 2018
+              href: threat-modeling-tool-releases-71510231.md
+            - name: Threat Modeling Tool-updaterelease 7.1.60126.1 - 29 jan 2019
+              href: threat-modeling-tool-releases-71601261.md
+            - name: Threat Modeling Tool-updaterelease 7.1.60408.1 - 9 april 2019
+              href: threat-modeling-tool-releases-71604081.md
+            - name: Threat Modeling Tool-updaterelease 7.1.60702.1 - 2 juli 2019
+              href: threat-modeling-tool-releases-71607021.md
+        - name: Oplossingen
+          href: threat-modeling-tool-mitigations.md
+          items:
+            - name: Controle en logboekregistratie
+              href: threat-modeling-tool-auditing-and-logging.md
+            - name: Verificatie
+              href: threat-modeling-tool-authentication.md
+            - name: Autorisatie
+              href: threat-modeling-tool-authorization.md
+            - name: Communicatiebeveiliging
+              href: threat-modeling-tool-communication-security.md
+            - name: Configuratiebeheer
+              href: threat-modeling-tool-configuration-management.md
+            - name: Cryptografie
+              href: threat-modeling-tool-cryptography.md
+            - name: Uitzonderingenbeheer
+              href: threat-modeling-tool-exception-management.md
+            - name: Invoervalidatie
+              href: threat-modeling-tool-input-validation.md
+            - name: Gevoelige gegevens
+              href: threat-modeling-tool-sensitive-data.md
+            - name: Sessiebeheer
+              href: threat-modeling-tool-session-management.md
