--- a/articles/hdinsight/interactive-query/TOC.yml
+++ b/articles/hdinsight/interactive-query/TOC.yml
@@ -28,6 +28,8 @@
           items:
             - name: De limiet voor GC-overhead is overschreden
               href: ./interactive-query-troubleshoot-outofmemory-overhead-exceeded.md
+        - name: ZooKeeperHiveClientException - HiveServer2-configuraties
+          href: ./interactive-query-troubleshoot-zookeeperhiveclientexception-hiveserver-configs.md
         - name: Query-prestaties van Apache Hive LLAP
           href: ./interactive-query-troubleshoot-query-performance.md
 - name: Procedures
