--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -50,7 +50,7 @@
         - name: Schijfversleuteling voor IaaS-VM's
           items:
             - name: Meer informatie over Azure Disk Encryption
-              displayName: 'Bitlocker, bek'
+              displayName: 'BitLocker, bek'
               href: azure-security-disk-encryption-overview.md
             - name: Snelstartgidsen
               items:
@@ -70,7 +70,7 @@
                   href: azure-security-disk-encryption-windows.md
                 - name: Schijfversleuteling voor Linux-VM's
                   href: azure-security-disk-encryption-linux.md
-                - name: Schijfversleuteling met VMMS-extensievolgorde
+                - name: Schijfversleuteling met extensiereeksen voor virtuele-machineschaalsets
                   href: azure-security-disk-encryption-extension-sequencing.md
                 - name: Bijlage voor schijfversleuteling
                   href: azure-security-disk-encryption-appendix.md
@@ -332,49 +332,3 @@
     - name: Pen testen
       displayName: penetration
       href: ./fundamentals/pen-testing.md
-    - name: Microsoft Threat Modeling Tool
-      displayName: stride
-      href: ./develop/threat-modeling-tool.md
-      items:
-        - name: Aan de slag
-          href: ./develop/threat-modeling-tool-getting-started.md
-        - name: Overzicht van de functies
-          href: ./develop/threat-modeling-tool-feature-overview.md
-        - name: Bedreigingen
-          href: ./develop/threat-modeling-tool-threats.md
-        - name: Releases
-          href: ./develop/threat-modeling-tool-releases.md
-          items:
-            - name: Threat Modeling Tool GA-release 7.1.5091.2 - 12 sept 2018
-              href: ./develop/threat-modeling-tool-releases-71509112.md
-            - name: Threat Modeling Tool-updaterelease 7.1.51023.1 - 1 nov 2018
-              href: ./develop/threat-modeling-tool-releases-71510231.md
-            - name: Threat Modeling Tool-updaterelease 7.1.60126.1 - 29 jan 2019
-              href: ./develop/threat-modeling-tool-releases-71601261.md
-            - name: Threat Modeling Tool-updaterelease 7.1.60408.1 - 9 april 2019
-              href: ./develop/threat-modeling-tool-releases-71604081.md
-            - name: Threat Modeling Tool-updaterelease 7.1.60702.1 - 2 juli 2019
-              href: ./develop/threat-modeling-tool-releases-71607021.md
-        - name: Oplossingen
-          href: ./develop/threat-modeling-tool-mitigations.md
-          items:
-            - name: Controle en logboekregistratie
-              href: ./develop/threat-modeling-tool-auditing-and-logging.md
-            - name: Verificatie
-              href: ./develop/threat-modeling-tool-authentication.md
-            - name: Autorisatie
-              href: ./develop/threat-modeling-tool-authorization.md
-            - name: Communicatiebeveiliging
-              href: ./develop/threat-modeling-tool-communication-security.md
-            - name: Configuratiebeheer
-              href: ./develop/threat-modeling-tool-configuration-management.md
-            - name: Cryptografie
-              href: ./develop/threat-modeling-tool-cryptography.md
-            - name: Uitzonderingenbeheer
-              href: ./develop/threat-modeling-tool-exception-management.md
-            - name: Invoervalidatie
-              href: ./develop/threat-modeling-tool-input-validation.md
-            - name: Gevoelige gegevens
-              href: ./develop/threat-modeling-tool-sensitive-data.md
-            - name: Sessiebeheer
-              href: ./develop/threat-modeling-tool-session-management.md
